// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioButton /> snapshots renders RadioButton 1`] = `
<div
  className="mfui-beta-radio-button"
>
  <label
    className="mfui-beta-radio-button__label"
  >
    <input
      className="mfui-beta-radio-button__input"
      disabled={false}
      onChange={[Function]}
      type="radio"
      value="value-text"
    />
    <div
      className="mfui-beta-radio-button__custom-input"
    />
    <div
      className="mfui-beta-radio-button__text mfui-beta-radio-button__text_size_medium"
    >
      Тестовая строка
    </div>
  </label>
</div>
`;

exports[`<RadioButton /> snapshots renders RadioButton with props 1`] = `
<div
  className="mfui-beta-radio-button test-class root-class"
>
  <label
    className="mfui-beta-radio-button__label mfui-beta-radio-button__label_disabled label-class"
  >
    <input
      checked={true}
      className="mfui-beta-radio-button__input"
      disabled={true}
      name="test-input-name"
      onChange={[Function]}
      type="radio"
      value="test-input-value"
    />
    <div
      className="mfui-beta-radio-button__custom-input custom-input-class"
    />
    <div
      className="mfui-beta-radio-button__text mfui-beta-radio-button__text_size_small label-text-class"
    >
      Тестовая строка
    </div>
  </label>
</div>
`;
